# rust-create-tenant

./: Cargo.toml
crs-client/: Cargo.toml
crs-client/src/: http_client.rs  response.rs
crs_client/src/: lib.rs  login.rs  response.rs
src/: main.rs
